<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graph_Frag"
    >

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/idBarChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:layout_constraintRight_toLeftOf="@id/guideline3"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintTop_toBottomOf="@+id/buttonHealth" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?attr/day"
            android:background="@color/black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintLeft_toRightOf="@id/guideline4"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?attr/month"
            android:background="@color/black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintRight_toLeftOf="@id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?attr/Calories"
            android:background="@color/black"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintLeft_toRightOf="@id/guideline4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?attr/Health_Point"
            android:background="@color/black"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintRight_toLeftOf="@id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSwap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?attr/Calendar"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            app:layout_constraintRight_toLeftOf="@id/buttonHealth"
            app:layout_constraintLeft_toRightOf="@id/buttonCalories"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            tools:ignore="MissingConstraints" />
            <!--app:layout_constraintLeft_toRightOf="@id/buttonCalories"
            app:layout_constraintTop_toBottomOf="@id/guideline2"/> -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.99" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.00" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />
      
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>