...
    <item
        android:id="@+id/frag_Home"
        android:title="Home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/profileActivity"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_person_24"/>
    <item
        android:id="@+id/barcodescanActivity"
        android:title="Scan"
        android:icon="@drawable/ic_baseline_qr_code_24"/>
    <item
        android:id="@+id/gamesMenu"
        android:title="Games"
        android:icon="@drawable/ic_baseline_gamepad_24"/>
    <item
        android:id="@+id/SignedInFragment"
        android:title="Settings"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>
