...
            android:theme="@style/CalenderViewCustom"
            android:visibility="visible"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintRight_toLeftOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/switchFragButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/switchFragButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
...
