...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="1" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rounded_logo"
                    app:civ_border_color="@color/planthuntGreen"
...
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/guidelineRH2"
                    app:layout_constraintLeft_toRightOf="@id/guidelineRV2"
                    app:layout_constraintRight_toLeftOf="@id/guidelineRV3"
                    app:layout_constraintTop_toBottomOf="@id/guidelineRH3">
                <TextView
                    android:id="@+id/profileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="?attr/title_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/statsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:background="@drawable/rounded_button"
...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:background="@null"
            android:id="@+id/changeButton"
            app:layout_constraintBottom_toTopOf="@id/guidelineH5"
            app:layout_constraintLeft_toRightOf="@id/guidelineV2"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/guidelineH6" />

        <LinearLayout
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.12" />

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV1"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.36" />

                <TextView
                    android:id="@+id/profileBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV1"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6" />

                <TextView
                    android:id="@+id/profileWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV1"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.84" />

                <TextView
                    android:id="@+id/profileHealthPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV1"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="1" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/goToQRCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:clickable="true"
                        android:src="@drawable/ic_baseline_qr_code_24"
                        app:layout_constraintBottom_toTopOf="@+id/guidelineLH23"
...
