...
    android:layout_height="match_parent"
    tools:context=".EditProfilePictureActivity"
    android:background="?attr/backgroundColor">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="3dp"
...
